--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/next"]
 	path = themes/next
-	url = git@github.com:zaynr/hexo-theme-next.git
+	url = https://github.com/theme-next/hexo-theme-next
