--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Zengyu's Cottage 
+title: Zengyu's Cottage
 subtitle:
 description:
 author: Zengyu Zeng
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://zengzy.me
+url: https://zengzengyu.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -69,5 +69,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/zaynr/zaynr.github.io.git
+  repo: git@github.com:zaynr/zaynr.github.io.git
   branch: master
